# freezewise

./: Dockerfile  Makefile  README.md  pyproject.toml  start.sh
frontend/: next.config.ts  package.json  tsconfig.tsbuildinfo
frontend/app/: client-shell.tsx  globals.css  layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/api/fridge/scan/: route.ts
frontend/app/fridge/: page.tsx
frontend/app/history/: page.tsx
frontend/app/recipes/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: barcode-scan.tsx  bottom-nav.tsx  category-tabs.tsx  fridge-item.tsx  import-share.tsx  masthead.tsx  photo-scan.tsx  product-card.tsx  product-detail.tsx  recipe-card.tsx  search-bar.tsx  share-fridge.tsx  skeleton.tsx  toast.tsx
frontend/lib/: api.ts  i18n.ts  store.ts  types.ts  utils.ts
frontend/public/: manifest.json
src/freezewise/: __init__.py  config.py  database.py  deps.py  main.py  rate_limit.py
src/freezewise/api/: __init__.py  fridge.py  products.py  scan.py
src/freezewise/data/: foods_seed.py
src/freezewise/repositories/: __init__.py  product_repo.py
src/freezewise/schemas/: __init__.py  constants.py  product.py  recipe.py  scan.py
src/freezewise/services/: __init__.py  agents.py  product_ai.py  product_service.py  recipe_service.py  scan_service.py
static/: index.html  manifest.json
tests/: __init__.py  conftest.py  test_api.py
