[project]
name = "freezewise"
version = "1.0.0"
description = "AI-powered food storage guide and smart fridge manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "pydantic-ai>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freezewise"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
